--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -6,4 +6,4 @@ deployment:
         - /bin/cp /<sub_folder>/<file_name> $DEPLOYPATH
         - /bin cp * $DEPLOYPATH
         - /bin cp /<sub_folder>/* $DEPLOYPATH
-        - /bin/cp -r * $DEPLOYPATH
+        - /bin/cp -row * $DEPLOYPATH
